        script/l10n-changes/output-l10n-changes and put its
        output here. Then put this note in the new UNRELEASED entry.

  * Anton Zinoviev
    - automatically_partition/some_device/do_option: creates new partition
      table with the default for the architecture type.  Closes: #235923
    - perform_recipe: start progress bar, as autopartitioning can be quiet
      slow
    
 -- Anton Zinoviev <zinoviev@debian.org>  Thu,  4 Mar 2004 21:16:50 +0200

partman-auto (7) unstable; urgency=low

  * Joey Hess
    - Use a different question for the initial autopartitioning.
    - After autopartitioning, set the default menu item on choose_partitions
      to the one that finishes the install. Closes: #235900
  * Anton Zinoviev
    - new files: perform_recipe and recipes.sh
    - extract most parts of autopartition to perform_recipe and
      recipes.sh 
    - perform_recipe: remove all old method files.  Closes: #235194.
    - recipes.sh: new function choose_recipe
    - automatically_partition/some_device/do_option: use directly
      choose_recipe and perform_recipe instead of autopartition.  Create
      new partition table only when the user has already chosen a recipe.
      Closes: #235377. 
    - Scripts that include recipes.sh  include also definition.sh,
      recipes.sh doesn't include definitions.sh any more. 
  
  * Updated translations: 
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by Christian Perrier
    - Hungarian (hu.po) by VERÓK István
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Bokmal, Norwegian (nb.po) by Axel Bojer
    -  (nn.po) by Håvard Korsvoll
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes